Pridaná hlavička do každého view, odstranenea funkcia onload z index.js konstrukcia custom elementu pridaná do komponentu three-level-menu.component- Pridaná funkcia na zistovanie prefixu adresy stránky. Pridaná funkcia na linkovanie css z js.

--- a/palencar/html/game.html
+++ b/palencar/html/game.html
@@ -11,18 +11,14 @@
     <link href="../../app/css/game-style.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
     <script src="../js/game.js"></script>
+    <script src="../../app/three-level-menu/js/three-level-menu.component.js"></script>
 
 
 </head>
 <body>
-<nav class="navigation-bar">
-    <ul class="navigation-bar-row">
-        <li class="item"><a class="item-link" href="../../index.html">Domov</a></li>
-        <li class="item"><a class="item-link" href="#"><span>O nás</span></a></li>
-        <li class="item"><a class="item-link" href="#">Hry</a></li>
-        <li class="item"><a class="item-link" href="#">Škola</a></li>
-    </ul>
-</nav>
+
+<three-level-menu>
+</three-level-menu>
 
 
 <section class="game-container">
