UPDATE: velkost cisla v pocitadle stranok

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="style.css" rel="stylesheet">
     <link href="app/css/footer.css" rel="stylesheet">
     <link href="app/css/header.css" rel="stylesheet">
+    <link href="app/css/attendanceCounterComponent.css" rel="stylesheet">
     <link href="app/css/index.css" rel="stylesheet">
     <link href="app/css/home-layout.css" rel="stylesheet">
     <script crossorigin="anonymous"
