--- a/app/checklist/html/checklist.html
+++ b/app/checklist/html/checklist.html
@@ -58,7 +58,7 @@
         <tbody class="scrollable-table">
             <tr>
                 <td>strihanie obrázkov</td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -66,7 +66,7 @@
 
             <tr>
                 <td>checklist</td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -74,7 +74,7 @@
 
             <tr>
                 <td>kontakt</td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -82,7 +82,7 @@
 
             <tr>
                 <td>hlavička</td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -92,7 +92,7 @@
                 <td>štruktúra projektu</td>
                 <td></td>
                 <td></td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
             </tr>
 
@@ -100,7 +100,7 @@
                 <td>git organizácia</td>
                 <td></td>
                 <td></td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
             </tr>
 
@@ -108,7 +108,7 @@
                 <td>layout hlavnej stránky dizajn</td>
                 <td></td>
                 <td></td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
             </tr>
 
@@ -116,7 +116,7 @@
                 <td>layout hier dizajn</td>
                 <td></td>
                 <td></td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
             </tr>
 
@@ -124,7 +124,7 @@
                 <td>trojúrovňové menu komponent</td>
                 <td></td>
                 <td></td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
             </tr>
 
@@ -132,14 +132,14 @@
                 <td>trojúrovňové menu dizajn</td>
                 <td></td>
                 <td></td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
             </tr>
 
             <tr>
                 <td>počítadlo prístupov komponent</td>
                 <td></td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -147,7 +147,7 @@
             <tr>
                 <td>počítadlo prístupov dizajn</td>
                 <td></td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -155,7 +155,7 @@
             <tr>
                 <td>meniny komponent</td>
                 <td></td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -163,7 +163,7 @@
             <tr>
                 <td>meniny dizajn</td>
                 <td></td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -173,7 +173,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
             </tr>
 
             <tr>
@@ -181,7 +181,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
             </tr>
 
             <tr>
@@ -189,7 +189,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
             </tr>
 
             <tr>
@@ -197,12 +197,12 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
             </tr>
 
             <tr>
                 <td>grafický návrh stránky</td>
-                <td><lottie-player  class="center-checkmark" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;"  autoplay></lottie-player></td>
+                <td><lottie-player class="center-checkmark icon-size" src="https://assets7.lottiefiles.com/packages/lf20_jjjqiczh.json" speed="1" autoplay></lottie-player></td>
                 <td></td>
                 <td></td>
                 <td></td>
