--- a/app/contact/html/contact.html
+++ b/app/contact/html/contact.html
@@ -48,17 +48,17 @@
 
             <tbody>
                 <tr>
-                    <td><lottie-player src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;" hover autoplay></lottie-player></td>
+                    <td><lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json" speed="1" hover autoplay></lottie-player></td>
                     <td>97896</td>
                 </tr>
 
                 <tr>
-                    <td><lottie-player src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;" hover autoplay></lottie-player></td>
+                    <td><lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json" speed="1" hover autoplay></lottie-player></td>
                     <td><a href="mailto:xpalencarm@stuba.sk">xpalencarm@stuba.sk</a></td>
                 </tr>
 
                 <tr>
-                    <td><lottie-player src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;" hover autoplay></lottie-player></td>
+                    <td><lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json" speed="1" hover autoplay></lottie-player></td>
                     <td><a href="https://www.facebook.com/palencar.michal/">palencar.michal</a></td>
                 </tr>
 
@@ -73,17 +73,17 @@
 
             <tbody>
             <tr>
-                <td><lottie-player src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;" hover autoplay></lottie-player></td>
+                <td><lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json" speed="1" hover autoplay></lottie-player></td>
                 <td>97899</td>
             </tr>
 
             <tr>
-                <td><lottie-player src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;" hover autoplay></lottie-player></td>
+                <td><lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json" speed="1" hover autoplay></lottie-player></td>
                 <td><a href="mailto:xpeluha@stuba.sk">xpeluha@stuba.sk</a></td>
             </tr>
 
             <tr>
-                <td><lottie-player src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;" hover autoplay></lottie-player></td>
+                <td><lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json" speed="1" hover autoplay></lottie-player></td>
                 <td><a href="https://www.facebook.com/matej.peluha/">matej.peluha</a></td>
             </tr>
 
@@ -98,17 +98,17 @@
 
             <tbody>
             <tr>
-                <td><lottie-player src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;" hover autoplay></lottie-player></td>
+                <td><lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json" speed="1" hover autoplay></lottie-player></td>
                 <td>97936</td>
             </tr>
 
             <tr>
-                <td><lottie-player src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;" hover autoplay></lottie-player></td>
+                <td><lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json" speed="1" hover autoplay></lottie-player></td>
                 <td><a href="mailto:xsremanak@stuba.sk">xsremanak@stuba.sk</a></td>
             </tr>
 
             <tr>
-                <td><lottie-player src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;" hover autoplay></lottie-player></td>
+                <td><lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json" speed="1" hover autoplay></lottie-player></td>
                 <td><a href="https://www.facebook.com/lubos.sremanak/">lubos.sremanak</a></td>
             </tr>
 
@@ -123,26 +123,23 @@
 
             <tbody>
             <tr>
-                <td><lottie-player src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;" hover autoplay></lottie-player></td>
+                <td><lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json" speed="1" hover autoplay></lottie-player></td>
                 <td>97933</td>
             </tr>
 
             <tr>
-                <td><lottie-player src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;" hover autoplay></lottie-player></td>
+                <td><lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json" speed="1" hover autoplay></lottie-player></td>
                 <td><a href="mailto:xsokolk@stuba.sk">xsokolk@stuba.sk</a></td>
             </tr>
 
             <tr>
-                <td><lottie-player src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json" background="transparent"  speed="1"  style="width: 30px; height: 30px;" hover autoplay></lottie-player></td>
+                <td><lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json" speed="1" hover autoplay></lottie-player></td>
                 <td><a href="https://www.facebook.com/kristian.sokol.5/">kristian.sokol.5</a></td>
             </tr>
 
             </tbody>
         </table>
     </div>
-
-
-
 
 </section>
 
