Celkový refactor kódu.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link crossorigin="anonymous" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" rel="stylesheet"/>
 
     <link href="style.css" rel="stylesheet">
     <link href="app/css/footer.css" rel="stylesheet">
@@ -16,8 +17,8 @@
     <link href="app/css/index.css" rel="stylesheet">
     <link href="app/css/home-layout.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="app/css/breadcrumbs.css">
-    <link rel="stylesheet" href="app/css/print.css">
+    <link href="app/css/breadcrumbs.css" rel="stylesheet">
+    <link href="app/css/print.css" rel="stylesheet">
 
     <link href="app/css/nameDayFinderComponent.css" rel="stylesheet">
 
@@ -38,7 +39,6 @@
 
     <script src="app/js/index.js"></script>
     <script src="app/breadcrumbs/BreadcrumbsComponent.js"></script>
-
 
 
     <script src="app/three-level-menu/js/three-level-menu.component.js"></script>
@@ -98,7 +98,8 @@
     <attendance-counter class="attendance-background thumbnail-container-event thumbnail-container-background"
                         id="attendance-counter"></attendance-counter>
 
-    <nameday-finder class="thumbnail-container-event name-day-background thumbnail-container-background"></nameday-finder>
+    <nameday-finder
+            class="thumbnail-container-event name-day-background thumbnail-container-background"></nameday-finder>
 
 </section>
 
