--- a/sremanak/html/game.html
+++ b/sremanak/html/game.html
@@ -28,12 +28,12 @@
     <script crossorigin="anonymous"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../../app/css/breadcrumbs.css">
+    <link href="../../app/css/breadcrumbs.css" rel="stylesheet">
     <script src="../../app/breadcrumbs/BreadcrumbsComponent.js"></script>
-    <link rel="stylesheet" href="../../app/css/print.css">
+    <link href="../../app/css/print.css" rel="stylesheet">
 
     <script src="../../app/js/attendanceCookiesHandler.js"></script>
-    <script src="../../app/three-level-menu/js/three-level-menu.component.js" defer></script>
+    <script defer src="../../app/three-level-menu/js/three-level-menu.component.js"></script>
 </head>
 <body onload="onLoad()">
 <audio id="tick" preload="auto" src="../../app/assets/audio/sremanak/tick.mp3"></audio>
