--- a/palencar/html/game.html
+++ b/palencar/html/game.html
@@ -11,8 +11,8 @@
     <link href="../../app/css/game-style.css" rel="stylesheet">
     <link href="../css/game.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="../../app/css/breadcrumbs.css">
-    <link rel="stylesheet" href="../../app/css/print.css">
+    <link href="../../app/css/breadcrumbs.css" rel="stylesheet">
+    <link href="../../app/css/print.css" rel="stylesheet">
 
     <script src="../../app/js/attendanceCookiesHandler.js"></script>
 
