Zmenené názvy hier.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="thumbnail-container-game gamepad-background thumbnail-container-background"
          onclick="changeView('./palencar/html/game.html')">
 
-        <span class="thumbnail-container-title">Záhada stratenej perly</span>
+        <span class="thumbnail-container-title">Pohľady Florencie</span>
         <img alt="Thumbnail gamepad" class="thumbnail-container-image gamepad-image"
              src="./app/assets/images/gamepad.png">
         <span class="thumbnail-container-name">Michal <span class="bold-max">Palenčár</span> </span>
@@ -68,7 +68,7 @@
          onclick="changeView('./peluha/html/game.html')">
 
         <span class=" thumbnail-container-title
-    ">Vojna dvoch trpaslíkov</span>
+    ">My little pony</span>
         <img alt="Thumbnail bomb" class="thumbnail-container-image bomb-image"
              src="./app/assets/images/bomb.png">
         <span class="thumbnail-container-name">Matej <span class="bold-max">Peluha</span> </span>
@@ -77,7 +77,7 @@
 
     <div class="thumbnail-container-game robot-background thumbnail-container-background "
          onclick="changeView('./sremanak/html/game.html')">
-        <span class="thumbnail-container-title ">Dobrodružstvá v džungli</span>
+        <span class="thumbnail-container-title ">Hororové postavičky</span>
         <img alt="Thumbnail robot" class="thumbnail-container-image robot-image"
              src="./app/assets/images/robot.png">
         <span class="thumbnail-container-name">Ľuboš <span
@@ -88,7 +88,7 @@
          onclick="changeView('./sokol/html/game.html')">
 
         <span class=" thumbnail-container-title
-    ">Štyri cigančata a peso</span>
+    ">Vitamín C</span>
         <img alt="Thumbnail cup" class="thumbnail-container-image cup-image"
              src="./app/assets/images/cup.png">
         <span class="thumbnail-container-name">Kristian <span
