Zmenené názvy hier.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Exam</title>
+    <title>Najlepšia</title>
 
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
@@ -68,7 +68,7 @@
          onclick="changeView('./peluha/html/game.html')">
 
         <span class=" thumbnail-container-title
-    ">My little pony</span>
+    ">Môj malý ponik</span>
         <img alt="Thumbnail bomb" class="thumbnail-container-image bomb-image"
              src="./app/assets/images/bomb.png">
         <span class="thumbnail-container-name">Matej <span class="bold-max">Peluha</span> </span>
