Zmenené názvy hier.

--- a/palencar/html/game.html
+++ b/palencar/html/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Hra</title>
+    <title>Pohľady Florencie</title>
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
     <link href="../../style.css" rel="stylesheet">
@@ -32,7 +32,7 @@
 </div>
 <section class="game-container">
     <div class="game-container-info gamepad-background">
-        <h1 class="game-container-info-title bold-max">Názov hry</h1>
+        <h1 class="game-container-info-title bold-max">Pohľady Florencie</h1>
         <h2 class="game-container-info-name">Michal<span class="bold-max"> Palenčár</span></h2>
     </div>
 
