--- a/peluha/html/game.html
+++ b/peluha/html/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, height=device-height, initial-scale=1" name="viewport">
-    <title>Môj malý ponik</title>
+    <title>Môj malý poník</title>
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
     <link href="../../style.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 <section class="game-container" id="game-container-id">
 
     <div class="game-container-info bomb-background">
-        <h1 class="game-container-info-title bold-max">Môj malý ponik</h1>
+        <h1 class="game-container-info-title bold-max">Môj malý poník</h1>
         <h2 class="game-container-info-name">Matej<span class="bold-max"> Peluha</span></h2>
     </div>
 
