--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="style.css" rel="stylesheet">
     <link href="app/css/footer.css" rel="stylesheet">
     <link href="app/css/header.css" rel="stylesheet">
-    <link href="app/css/attendanceCounterComponent.css" rel="stylesheet">
+    <link href="app/attendanceCounter/css/attendanceCounter.component.css" rel="stylesheet">
     <link href="app/css/index.css" rel="stylesheet">
     <link href="app/css/home-layout.css" rel="stylesheet">
     <script crossorigin="anonymous"
@@ -23,8 +23,8 @@
             src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 
-    <script src="app/js/attendanceCookiesHandler.js"></script>
-    <script src="app/js/attendanceCounterComponent.js"></script>
+    <script src="app/attendanceCounter/js/attendanceCookiesHandler.js"></script>
+    <script src="app/attendanceCounter/js/attendanceCounter.component.js"></script>
 
     <script src="app/js/index.js"></script>
 
