--- a/app/contact/html/contact.html
+++ b/app/contact/html/contact.html
@@ -24,21 +24,18 @@
             src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="../../js/index.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="../../three-level-menu/js/three-level-menu.component.js"></script>
+    <script src="../../breadcrumbs/BreadcrumbsComponent.js"></script>
 
 </head>
+
+
 <body>
-
-
-<nav class="navigation-bar">
-
-    <ul class="navigation-bar-row">
-        <li class="item item-active"><a class="item-link" href="../../../index.html">Domov</a></li>
-        <li class="item"><a class="item-link" href="#"><span>O nás</span></a></li>
-        <li class="item"><a class="item-link" href="#">Hry</a></li>
-        <li class="item"><a class="item-link" href="#">Škola</a></li>
-    </ul>
-</nav>
-
+<three-level-menu>
+</three-level-menu>
+<div class="breadcrumbs-container">
+    <breadcrumbs-component></breadcrumbs-component>
+</div>
 
 <section class="thumbnail-container">
     <div class="contact-content color-palencar">
@@ -47,20 +44,29 @@
         <table class="contact-table">
 
             <tbody>
-                <tr>
-                    <td><lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json" speed="1" hover autoplay></lottie-player></td>
-                    <td>97896</td>
-                </tr>
+            <tr>
+                <td>
+                    <lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"
+                                   speed="1" hover autoplay></lottie-player>
+                </td>
+                <td>97896</td>
+            </tr>
 
-                <tr>
-                    <td><lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json" speed="1" hover autoplay></lottie-player></td>
-                    <td><a href="mailto:xpalencarm@stuba.sk">xpalencarm@stuba.sk</a></td>
-                </tr>
+            <tr>
+                <td>
+                    <lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"
+                                   speed="1" hover autoplay></lottie-player>
+                </td>
+                <td><a href="mailto:xpalencarm@stuba.sk">xpalencarm@stuba.sk</a></td>
+            </tr>
 
-                <tr>
-                    <td><lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json" speed="1" hover autoplay></lottie-player></td>
-                    <td><a href="https://www.facebook.com/palencar.michal/">palencar.michal</a></td>
-                </tr>
+            <tr>
+                <td>
+                    <lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"
+                                   speed="1" hover autoplay></lottie-player>
+                </td>
+                <td><a href="https://www.facebook.com/palencar.michal/">palencar.michal</a></td>
+            </tr>
 
             </tbody>
         </table>
@@ -73,17 +79,26 @@
 
             <tbody>
             <tr>
-                <td><lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json" speed="1" hover autoplay></lottie-player></td>
+                <td>
+                    <lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"
+                                   speed="1" hover autoplay></lottie-player>
+                </td>
                 <td>97899</td>
             </tr>
 
             <tr>
-                <td><lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json" speed="1" hover autoplay></lottie-player></td>
+                <td>
+                    <lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"
+                                   speed="1" hover autoplay></lottie-player>
+                </td>
                 <td><a href="mailto:xpeluha@stuba.sk">xpeluha@stuba.sk</a></td>
             </tr>
 
             <tr>
-                <td><lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json" speed="1" hover autoplay></lottie-player></td>
+                <td>
+                    <lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"
+                                   speed="1" hover autoplay></lottie-player>
+                </td>
                 <td><a href="https://www.facebook.com/matej.peluha/">matej.peluha</a></td>
             </tr>
 
@@ -98,17 +113,26 @@
 
             <tbody>
             <tr>
-                <td><lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json" speed="1" hover autoplay></lottie-player></td>
+                <td>
+                    <lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"
+                                   speed="1" hover autoplay></lottie-player>
+                </td>
                 <td>97936</td>
             </tr>
 
             <tr>
-                <td><lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json" speed="1" hover autoplay></lottie-player></td>
+                <td>
+                    <lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"
+                                   speed="1" hover autoplay></lottie-player>
+                </td>
                 <td><a href="mailto:xsremanak@stuba.sk">xsremanak@stuba.sk</a></td>
             </tr>
 
             <tr>
-                <td><lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json" speed="1" hover autoplay></lottie-player></td>
+                <td>
+                    <lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"
+                                   speed="1" hover autoplay></lottie-player>
+                </td>
                 <td><a href="https://www.facebook.com/lubos.sremanak/">lubos.sremanak</a></td>
             </tr>
 
@@ -123,17 +147,26 @@
 
             <tbody>
             <tr>
-                <td><lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json" speed="1" hover autoplay></lottie-player></td>
+                <td>
+                    <lottie-player class="icon-size" src="https://assets7.lottiefiles.com/packages/lf20_glpc2evg.json"
+                                   speed="1" hover autoplay></lottie-player>
+                </td>
                 <td>97933</td>
             </tr>
 
             <tr>
-                <td><lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json" speed="1" hover autoplay></lottie-player></td>
+                <td>
+                    <lottie-player class="icon-size" src="https://assets10.lottiefiles.com/packages/lf20_gj6gqatw.json"
+                                   speed="1" hover autoplay></lottie-player>
+                </td>
                 <td><a href="mailto:xsokolk@stuba.sk">xsokolk@stuba.sk</a></td>
             </tr>
 
             <tr>
-                <td><lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json" speed="1" hover autoplay></lottie-player></td>
+                <td>
+                    <lottie-player class="icon-size" src="https://assets1.lottiefiles.com/packages/lf20_zylst2m1.json"
+                                   speed="1" hover autoplay></lottie-player>
+                </td>
                 <td><a href="https://www.facebook.com/kristian.sokol.5/">kristian.sokol.5</a></td>
             </tr>
 
