Pridaný breadcrumbs css.

--- a/app/contact/html/contact.html
+++ b/app/contact/html/contact.html
@@ -7,12 +7,12 @@
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
     <link href="../../../style.css" rel="stylesheet">
-    <link href="../../css/footer.css" rel="stylesheet">
     <link href="../../css/header.css" rel="stylesheet">
     <link href="../../css/index.css" rel="stylesheet">
     <link href="../../css/home-layout.css" rel="stylesheet">
     <link href="../../checklist/css/checklist.css" rel="stylesheet">
     <link href="../css/contact.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../css/breadcrumbs.css">
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
@@ -26,6 +26,7 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="../../three-level-menu/js/three-level-menu.component.js"></script>
     <script src="../../breadcrumbs/BreadcrumbsComponent.js"></script>
+
 
 </head>
 
