Zmazané nadbytočné css linky.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,11 @@
 
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
-
     <link href="style.css" rel="stylesheet">
-    <link href="app/css/footer.css" rel="stylesheet">
-    <link href="app/attendanceCounter/css/attendanceCounter.component.css" rel="stylesheet">
-    <link href="app/css/index.css" rel="stylesheet">
     <link href="app/css/home-layout.css" rel="stylesheet">
     <link href="app/css/breadcrumbs.css" rel="stylesheet">
-    <link href="app/css/print.css" rel="stylesheet">
-    <link href="app/nameDayFinder/css/nameDayFinder.component.css" rel="stylesheet">
-
+    <link href="app/attendanceCounter/css/attendanceCounter.component.css" rel="stylesheet">
+    <link rel="stylesheet" href="app/nameDayFinder/css/nameDayFinder.component.css">
     <script crossorigin="anonymous"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
@@ -88,7 +83,8 @@
                         id="attendance-counter"></attendance-counter>
 
 
-    <nameday-finder class="thumbnail-container-event name-day-background thumbnail-container-background"></nameday-finder>
+    <nameday-finder
+            class="thumbnail-container-event name-day-background thumbnail-container-background"></nameday-finder>
 
 
 </section>
